--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -1,1 +1,16 @@
-@import 'tailwindcss'
+ /* Outfit google font */
+ @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+ /* tailwind */
+ @import 'tailwindcss';
+
+ /* Global styles */
+ * {
+   font-family: "Outfit", sans-serif;
+ }
+
+ /* active button color */
+ .active {
+   background-color: #ffebf5;
+   border-color: #C586A5;
+ }
