--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -9,6 +9,15 @@
    font-family: "Outfit", sans-serif;
  }
 
+ select,
+ input,
+ textarea {
+   border: 1px solid #c2c2c2;
+   outline-color: #C586A5;
+   border-radius: 4px;
+   resize: none;
+ }
+
  /* active button color */
  .active {
    background-color: #ffebf5;
